pgweb/templates/service.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels")
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.app
  namespace: #@ data.values.namespace
  labels: #@ labels()
spec:
  ports:
  - port: 8081
    targetPort: 8081
  selector: #@ labels()
